# voicegpt

./: .gitignore  PYTHON TIMER 5.py  README.md  flake.nix  main  main.py  pyproject.toml  requirements.txt  shell.nix  tts_test.py
data/de/: idle_words.txt  wake_words.txt  welcome_phrases.txt
data/en/: idle_words.txt  wake_words.txt  welcome_phrases.txt
data/ja/: idle_words.txt  wake_words.txt  welcome_phrases.txt
src/: main.py  utils.py
