[tool.poetry]
name = "voicegpt"
version = "0.1.0"
description = ""
authors = ["Daenariz"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10"
openai = "0.28"
pyttsx3 = "^2.98"
speechrecognition = "^3.12.0"
python-dotenv = "^1.0.1"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
